--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "lodash": "^4.17.11",
     "style-loader": "^0.23.0",
     "webpack": "^4.20.0",
